project(foo)

set(CMAKE_CXX_STANDARD 11)

file(GLOB CPP_SOURCES *.cpp)
add_library(${PROJECT_NAME} ${CPP_SOURCES})

target_include_directories(${PROJECT_NAME}
    PUBLIC
        $<INSTALL_INTERFACE:${CMAKE_CURRENT_LIST_DIR}>
        $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}>
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}
)

file(GLOB CPP_HEADERS *.h)
set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER "${CPP_HEADERS}")
install(TARGETS ${PROJECT_NAME}
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION bin
  ARCHIVE DESTINATION bin
  PUBLIC_HEADER DESTINATION ${PROJECT_NAME}
)